<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notifikasi"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dzikir_pagi"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/Black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_alarm_pagi"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time" />

        <TextView
            android:id="@+id/tv_repeating_pagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setel_waktu_alarm" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_repeating_message_pagi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/setel_pesan_alarm_dzikir"
        android:textSize="14sp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/red"
            android:text="@string/batalkan_alarm"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_set_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/Black"
            android:text="@string/set_alarm_dzikir"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dzikir_petang"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/Black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_alarm_petang"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time"
            android:contentDescription="@string/alarm_icon" />

        <TextView
            android:id="@+id/tv_repeating_petang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setel_waktu_alarm" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_repeating_message_petang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/setel_pesan_alarm_dzikir"
        android:textSize="14sp"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_repeating_alarm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/red"
            android:text="@string/batalkan_alarm"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_set_repeating_alarm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/Black"
            android:text="@string/set_alarm_dzikir"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Allah Subhanahu wa Ta’ala berfirman,"
            android:textColor="@color/Black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="الَّذِينَ آمَنُوا وَتَطْمَئِنُّ قُلُوبُهُمْ بِذِكْرِ اللَّهِ أَلا بِذِكْرِ اللَّهِ تَطْمَئِنُّ الْقُلُوبُ"
            android:textColor="@color/Black"
            android:layout_marginTop="14dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="“Orang-orang yang beriman dan hati mereka menjadi tenteram dengan berzikir (mengingat) Allah. Ingatlah, hanya dengan mengingat Allah hati menjadi tenteram” ."
            android:layout_marginTop="16dp"
            android:textSize="13sp"
            android:justificationMode="inter_word"
            android:textColor="@color/Black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="(Qs. ar-Ra’du: 28)"
            android:layout_marginTop="14dp"/>
    </LinearLayout>

</LinearLayout>
